<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.hbasesoft.framework</groupId>
	<artifactId>framework</artifactId>
	<version>4.0</version>
	<packaging>pom</packaging>
	<name>${project.artifactId}</name>
	<description>框架</description>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.12</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	<modules>
		<module>framework-common</module>
		<module>framework-db</module>
		<module>framework-cache</module>
		<module>framework-message</module>
		<module>framework-log</module>
		<module>framework-rule</module>
		<module>framework-job</module>
		<module>framework-tx</module>
		<module>framework-shell</module>
		<module>framework-dependencies</module>
	</modules>
	<properties>
		<java.version>21</java.version>
		<spring-cloud.version>2021.0.7</spring-cloud.version>
		<fastjson.version>2.0.14</fastjson.version>
		<ognl.version>3.3.4</ognl.version>
		<velocity.version>2.3</velocity.version>
		<thumbnailator.version>0.4.17</thumbnailator.version>
		<commons-io.version>2.11.0</commons-io.version>
		<commons-lang.version>2.6</commons-lang.version>
		<commons-beanutils.version>1.9.4</commons-beanutils.version>
		<commons-collections.version>3.2.2</commons-collections.version>
		<jasypt.version>1.9.3</jasypt.version>
		<protostuff.version>1.8.0</protostuff.version>
		<druid.version>1.2.12</druid.version>
		<curator.version>5.3.0</curator.version>
		<jcommander.version>1.82</jcommander.version>
		<dom4j.version>2.1.3</dom4j.version>
		<caffeine.version>3.1.1</caffeine.version>
		<flumn.version>1.10.0</flumn.version>
		<jsch.version>0.1.55</jsch.version>
		<elasticjob.version>3.0.1</elasticjob.version>
		<jaxb.version>4.0.0</jaxb.version>
		<xxl-job.version>2.4.0</xxl-job.version>
		<javax-persistence.version>2.2</javax-persistence.version>
		<mysql.version>8.0.33</mysql.version>
		<fury.version>0.1.0</fury.version>
		<lombok.version>1.18.30</lombok.version>
	</properties>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>org.apache.curator</groupId>
				<artifactId>curator-framework</artifactId>
				<version>${curator.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.curator</groupId>
				<artifactId>curator-recipes</artifactId>
				<version>${curator.version}</version>
			</dependency>
			<dependency>
				<groupId>com.beust</groupId>
				<artifactId>jcommander</artifactId>
				<version>${jcommander.version}</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/commons-lang/commons-lang -->
			<dependency>
				<groupId>commons-lang</groupId>
				<artifactId>commons-lang</artifactId>
				<version>${commons-lang.version}</version>
			</dependency>

			<dependency>
				<groupId>commons-collections</groupId>
				<artifactId>commons-collections</artifactId>
				<version>${commons-collections.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.velocity</groupId>
				<artifactId>velocity-engine-core</artifactId>
				<version>${velocity.version}</version>
			</dependency>

			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>fastjson</artifactId>
				<version>${fastjson.version}</version>
			</dependency>
			<dependency>
				<groupId>ognl</groupId>
				<artifactId>ognl</artifactId>
				<version>${ognl.version}</version>
			</dependency>

			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons-io.version}</version>
			</dependency>

			<!-- 处理图片 -->
			<dependency>
				<groupId>net.coobird</groupId>
				<artifactId>thumbnailator</artifactId>
				<version>${thumbnailator.version}</version>
			</dependency>

			<!-- 数据库密码加密工具 -->
			<dependency>
				<groupId>org.jasypt</groupId>
				<artifactId>jasypt</artifactId>
				<version>${jasypt.version}</version>
			</dependency>

			<!-- 序列化工具 -->
			<dependency>
				<groupId>org.furyio</groupId>
				<artifactId>fury-core</artifactId>
				<version>${fury.version}</version>
			</dependency>

			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>druid</artifactId>
				<version>${druid.version}</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/dom4j/dom4j -->
			<dependency>
				<groupId>org.dom4j</groupId>
				<artifactId>dom4j</artifactId>
				<version>${dom4j.version}</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/commons-beanutils/commons-beanutils -->
			<dependency>
				<groupId>commons-beanutils</groupId>
				<artifactId>commons-beanutils</artifactId>
				<version>${commons-beanutils.version}</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/com.github.ben-manes.caffeine/caffeine -->
			<dependency>
				<groupId>com.github.ben-manes.caffeine</groupId>
				<artifactId>caffeine</artifactId>
				<version>${caffeine.version}</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/org.apache.flume/flume-ng-core -->
			<dependency>
				<groupId>org.apache.flume</groupId>
				<artifactId>flume-ng-core</artifactId>
				<version>${flumn.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.flume</groupId>
				<artifactId>flume-ng-configuration</artifactId>
				<version>${flumn.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.flume</groupId>
				<artifactId>flume-ng-node</artifactId>
				<version>${flumn.version}</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/com.jcraft/jsch -->
			<dependency>
				<groupId>com.jcraft</groupId>
				<artifactId>jsch</artifactId>
				<version>${jsch.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.shardingsphere.elasticjob</groupId>
				<artifactId>elasticjob-lite-core</artifactId>
				<version>${elasticjob.version}</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/com.sun.xml.bind/jaxb-impl -->
			<dependency>
				<groupId>com.sun.xml.bind</groupId>
				<artifactId>jaxb-impl</artifactId>
				<version>${jaxb.version}</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/com.xuxueli/xxl-job-core -->
			<dependency>
				<groupId>com.xuxueli</groupId>
				<artifactId>xxl-job-core</artifactId>
				<version>${xxl-job.version}</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/javax.persistence/javax.persistence-api -->
			<dependency>
				<groupId>javax.persistence</groupId>
				<artifactId>javax.persistence-api</artifactId>
				<version>${javax-persistence.version}</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
			<dependency>
				<groupId>mysql</groupId>
				<artifactId>mysql-connector-java</artifactId>
				<version>${mysql.version}</version>
			</dependency>

			<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
			<dependency>
			    <groupId>org.projectlombok</groupId>
			    <artifactId>lombok</artifactId>
			    <version>${lombok.version}</version>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<!-- 可以用来批量修改版本的插件 -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<configuration>
					<generateBackupPoms>false</generateBackupPoms>
				</configuration>
			</plugin>

			<!-- 做checkstyle的插件 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<configLocation>config/checkstyle/hbasesoft-check-1.0.xml</configLocation>
				</configuration>
				<executions>
					<execution>
						<id>checkstyle</id>
						<phase>deploy</phase>
						<goals>
							<goal>check</goal>
						</goals>
						<configuration>
							<failOnViolation>true</failOnViolation>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<!-- 在提交代码的时候自动做checkstyle的插件 -->
			<plugin>
				<groupId>io.github.phillipuniverse</groupId>
				<artifactId>githook-maven-plugin</artifactId>
				<version>1.0.5</version>
				<executions>
					<execution>
						<goals>
							<goal>install</goal>
						</goals>
						<configuration>
							<hooks>
								<!-- 注意这里是调用shell命令去执行mvn命令，默认生成的hook文件执行路径可能与项目的pom.xml文件不一致，所以我这里用`-f`重新指定了本项目的pom文件路径 -->
								<pre-commit>
									echo "begin to execute hook"gst
									mvn checkstyle:check
									RESULT=$?
									exit $RESULT
								</pre-commit>
							</hooks>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<!-- 编译设置jdk版本的插件 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<generateBackupPoms>false</generateBackupPoms>
				</configuration>
			</plugin>

			<!-- 编译时把源码打入jar包 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<resources>
			<resource>
				<directory>src/main/java</directory>
				<includes>
					<include>**/*.sql</include>
					<include>**/*.vm</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<includes>
					<include>**/*.*</include>
				</includes>
			</resource>
		</resources>
	</build>

	<distributionManagement>
		<repository>
			<id>releases</id>
			<name>Nexus Release Repository</name>
			<url>http://nexus.hbasesoft.com:8888/repository/maven-releases/</url>
		</repository>
		<snapshotRepository>
			<id>snapshots</id>
			<name>Nexus Snapshot Repository</name>
			<url>http://nexus.hbasesoft.com:8888/repository/maven-snapshots/</url>
		</snapshotRepository>
	</distributionManagement>
</project> 